# rust_acitx_docker_compose_api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2025-04-19-060852_my_task/: down.sql  up.sql
migrations/2025-04-19-171644_remove_table/: up.sql
src/: main.rs  schema.rs
src/connections/: db_connection.rs
src/todo/: dto.rs  mod.rs  model.rs  repo.rs  routes.rs  service.rs
static/: index.html
